Dodano numer rundy

--- a/templates/main.html
+++ b/templates/main.html
@@ -44,6 +44,12 @@ Panel główny
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
+                        {{ form.runda.label }}
+                        {{ form.runda }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
                         {{ form.akt_team.label }}
                         {{ form.akt_team }}
                     </div>
